deployments/base/ingress/haproxy-ingress/networkpolicies/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: haproxy-ingress
  namespace: ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: haproxy-ingress
  ingress:
  # In-namespace
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": ingress
  # HTTP
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "81"
        protocol: TCP
      - port: "8080"
        protocol: TCP
      - port: "8081"
        protocol: TCP
      - port: "443"
        protocol: TCP
      - port: "444"
        protocol: TCP
      - port: "8443"
        protocol: TCP
      - port: "8444"
        protocol: TCP
      - port: "2222"
        protocol: TCP
  # Prometheus
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": prometheus
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: "9101"
        protocol: TCP
      - port: "10254"
        protocol: TCP
  egress:
  # In-namespace
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": ingress
  # Kubernetes API
  - toEntities:
    - kube-apiserver
  # DNS
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  # Other namespaces
  - toEntities:
    - cluster
